force-app/main/default/objects/clofor_com_cfs__TrxPlanCashAdvance__c/fields/clofor_com_cfs__AmountAdvancedPaidLocalCA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountAdvancedPaidLocalCA__c</fullName>
    <label>Amount Advance Paid(Local)-Cash Advance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>