force-app/main/default/objects/clofor_com_cfs__TrxPlanCashAdvance__c/fields/clofor_com_cfs__CashAdvanceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashAdvanceID__c</fullName>
    <label>Cash Advance ID</label>
    <referenceTo>clofor_com_cfs__CashAdvance__c</referenceTo>
    <relationshipLabel>TRX PLAN+CASH ADVANCE</relationshipLabel>
    <relationshipName>TrxPlanCashAdvance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>