force-app/main/default/objects/clofor_com_cfs__TrxPlanCashAdvance__c/fields/clofor_com_cfs__NoOfDaysAfterCreated__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NoOfDaysAfterCreated__c</fullName>
    <inlineHelpText>It copies from No of Days after Created in Payment Request Record.
When Liquidation process completed, it set to 0.</inlineHelpText>
    <label>No of Days after Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>