force-app/main/default/objects/clofor_com_cfs__TrxPlanCashAdvance__c/fields/clofor_com_cfs__TrxPlanID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanID__c</fullName>
    <label>Trx Plan ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__PaymentRequest__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Liquidation Request-Local, Advance Payment Request-Local, Liquidation Request-FCY, Advance Payment Request-FCY</value>
        </filterItems>
        <filterItems>
            <field>clofor_com_cfs__PaymentRequest__c.clofor_com_cfs__ApprovalStatus__c</field>
            <operation>notContain</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipLabel>TRX PLAN+CASH ADVANCE</relationshipLabel>
    <relationshipName>TrxPlanCashAdvance</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>